Develop/heroku next release (#28)
* Credentials for trello.

* Finally - application can serve request to trello servers

* @Autowired by constructor

* Little refactoring
(and some tests - for myself)

* Added support lists from boards

* Added "creating Cards (single tasks) on Trello Board" feature

* Refactoring - moved CreatedTrelloCard.class to correct package

* Added badges in mapped response from Trello server after creating new card

* Some refactoring and preparing to tests (mocks and so on)

* Reformat code with google-code-style (I have to compare with own style)

* Test for trello client getting boards

* Test for trello client creating card

* Test for null from trello client

* Added missing dep. for tests

* Merge local changes to main develop (#26)

* Merging new frontend (#25)

* Changes in frontend for trello functionality.

* Little thing and it makes you happy.

Everything (or almost everything from backend was done). It's time to prepare to next release (with all functionality (trello integration).

* Add trelloapi endpoint (on heroku servers)

* Fix application.properties:
add heroku env for trello credentials
bring back postresql database
add trello api endpoint

* Fix build.gradle
I forgot about postgresql compile

--- a/frontEnd/style.css
+++ b/frontEnd/style.css
@@ -73,6 +73,12 @@ body {
     margin: 0;
 }
 
+.datatable__row-section-wrapper {
+    display: flex;
+    flex-grow: 1;
+    justify-content: space-around;
+}
+
 .datatable__row:first-of-type {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
@@ -162,6 +168,11 @@ body {
     min-width: 120px;
     line-height: 1.25;
     border-radius: 4px;
+}
+
+.datatable__select {
+    display: block;
+    margin-bottom: 10px;
 }
 
 .datatable__tasks-container:empty {
