--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,5 +9,13 @@
 
 <!--/*@thymesVar id="variable" type="pl.com.bohdziewicz.trelloDbTask.controller.StaticWEbPageController"*/-->
 <span th:text="${variable}"></span>
+<br>
+1+2 = <span th:text="${one} + ${two}"></span>
+<br>
+1*2 = <span th:text="${one}*${two}"></span>
+<br>
+<!--I have to find better way -->
+<span th:text="${two}"></span> + <span th:text="${two}"></span> * <span th:text="${two}"></span> = <span
+        th:text="${two} + ${two} * ${two}"></span>
 </body>
 </html>
