--- a/src/main/resources/templates/mail/created-trello-card-mail.html
+++ b/src/main/resources/templates/mail/created-trello-card-mail.html
@@ -130,8 +130,13 @@
                                                         <tbody>
                                                         <tr>
                                                             <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #3498db; border-radius: 5px; text-align: center;">
-                                                                <a href="http://google.com" target="_blank"
-                                                                   style="display: inline-block; color: #ffffff; background-color: #3498db; border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-transform: capitalize; border-color: #3498db;">BUTTON_NAME</a>
+                                                                <a th:href="${tasks_url}" target="_blank"
+                                                                   style="display: inline-block; color: #ffffff;
+                                                                   background-color: #3498db; border: solid 1px
+                                                                   #3498db; border-radius: 5px; box-sizing:
+                                                                   border-box; cursor: pointer;
+                                                                   text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-transform: capitalize; border-color: #3498db;"
+                                                                   th:text="${button}"></a>
                                                             </td>
                                                         </tr>
                                                         </tbody>
