--- a/src/main/resources/templates/mail/created-trello-card-mail.html
+++ b/src/main/resources/templates/mail/created-trello-card-mail.html
@@ -116,7 +116,8 @@
                                 <tr>
                                     <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
-                                            WELCOME_MESSAGE</p>
+                                            Dear <span th:text="${admin_name}"></span>, administrator of TrelloDbApp!
+                                        </p>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"
                                            th:text="${message}"</p>
                                         <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary"
@@ -163,7 +164,8 @@
                         <tr>
                             <td class="content-block"
                                 style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
-                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">COMPANY_DETAILS</span>
+                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;"
+                                      th:text="${companyDetail}"></span>
                             </td>
                         </tr>
                     </table>
