--- a/src/main/resources/templates/mail/created-trello-card-mail.html
+++ b/src/main/resources/templates/mail/created-trello-card-mail.html
@@ -120,7 +120,9 @@
                                         </p>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"
                                            th:text="${message}"</p>
-                                        <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary"
+                                        <table th:if="${show_button}" border="0" cellpadding="0" cellspacing="0"
+                                               class="btn
+                                        btn-primary"
                                                style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; box-sizing: border-box;">
                                             <tbody>
                                             <tr>
