--- a/src/main/resources/templates/mail/created-trello-card-mail.html
+++ b/src/main/resources/templates/mail/created-trello-card-mail.html
@@ -115,11 +115,18 @@
                                    style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                                 <tr>
                                     <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">
-                                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
-                                            Dear <span th:text="${admin_name}"></span>, administrator of TrelloDbApp!
+                                        <!--Header of greetings-->
+                                        <p th:if="${is_friend}" style="font-family: sans-serif; font-size: 14px;
+                                        font-weight: normal; margin: 0; margin-bottom: 15px;">
+                                            Hi <span th:text="${admin_name}">I've got info for you.</span>
                                         </p>
+                                        <p th:unless="${is_friend}" style="font-family: sans-serif; font-size: 14px;
+                                        font-weight: normal; margin: 0; margin-bottom: 15px;">
+                                            Dear <span th:text="${admin_name}"></span> , administrator of TrelloDbApp!
+                                        </p>
+                                        <br>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"
-                                           th:text="${message}"</p>
+                                           th:text="${message}"/> <br>
                                         <table th:if="${show_button}" border="0" cellpadding="0" cellspacing="0"
                                                class="btn
                                         btn-primary"
