--- a/src/main/resources/templates/mail/created-trello-card-mail.html
+++ b/src/main/resources/templates/mail/created-trello-card-mail.html
@@ -118,11 +118,13 @@
                                         <!--Header of greetings-->
                                         <p th:if="${is_friend}" style="font-family: sans-serif; font-size: 14px;
                                         font-weight: normal; margin: 0; margin-bottom: 15px;">
-                                            Hi <span th:text="${admin_name}">I've got info for you.</span>
+                                            Hi <span
+                                                th:text="${admin_name.getAdminName()}">I've got info for you.</span>
                                         </p>
                                         <p th:unless="${is_friend}" style="font-family: sans-serif; font-size: 14px;
                                         font-weight: normal; margin: 0; margin-bottom: 15px;">
-                                            Dear <span th:text="${admin_name}"></span> , administrator of TrelloDbApp!
+                                            Dear <span th:text="${admin_name.getAdminName()}"></span> , administrator of
+                                            TrelloDbApp!
                                         </p>
                                         <br>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"
