--- a/src/main/resources/templates/mail/scheulded-mail.html
+++ b/src/main/resources/templates/mail/scheulded-mail.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Trello Card</title>
+    <title>Scheduled Mail</title>
     <style>
 
         @media only screen and (max-width: 620px) {
@@ -49,26 +49,9 @@
                 width: 100% !important;
             }
 
-            table[class=body] .img-responsive {
-                height: auto !important;
-                max-width: 100% !important;
-                width: auto !important;
-            }
         }
 
         @media all {
-            .ExternalClass {
-                width: 100%;
-            }
-
-            .ExternalClass,
-            .ExternalClass p,
-            .ExternalClass span,
-            .ExternalClass font,
-            .ExternalClass td,
-            .ExternalClass div {
-                line-height: 100%;
-            }
 
             .apple-link a {
                 color: inherit !important;
@@ -103,7 +86,7 @@
 
                 <!-- START CENTERED WHITE CONTAINER -->
                 <span class="preheader"
-                      style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">PREVIEW_MESSAGE</span>
+                      style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;"></span>
                 <table class="main"
                        style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #ffffff; border-radius: 3px;">
 
@@ -115,21 +98,15 @@
                                    style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                                 <tr>
                                     <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">
-                                        <!--Header of greetings-->
-                                        <p th:if="${is_friend}" style="font-family: sans-serif; font-size: 14px;
-                                        font-weight: normal; margin: 0; margin-bottom: 15px;">
-                                            Hi <span
-                                                th:text="${admin_name.getAdminName()}">I've got info for you.
-                                            (Scheulded mail) </span>
-                                        </p>
-                                        <p th:unless="${is_friend}" style="font-family: sans-serif; font-size: 14px;
-                                        font-weight: normal; margin: 0; margin-bottom: 15px;">
-                                            Dear <span th:text="${admin_name.getAdminName()}"></span> , administrator of
-                                            TrelloDbApp!
-                                        </p>
+                                        Hi <span th:text="${admin_name.getAdminName()}"></span> , admin of TrelloDbApp
+
+                                        <br>
                                         <br>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"
                                            th:text="${message}"/> <br>
+
+                                        <!--- The button may come in handy later --->
+
                                         <table th:if="${show_button}" border="0" cellpadding="0" cellspacing="0"
                                                class="btn
                                         btn-primary"
@@ -158,16 +135,18 @@
                                             </tr>
                                             </tbody>
                                         </table>
-                                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal;
-                                        margin: 0; margin-bottom: 15px;"> Application functionality: </p>
-                                        <br>
 
-                                        <ul th:each="function:${app_functions}">
-                                            <li th:text="${function}"></li>
+                                        <!---End of button section --->
+
+                                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal;
+                                        margin: 0; margin-bottom: 15px;"> Tasks in data base: </p>
+
+                                        <ul th:each="task:${tasks_in_db}">
+                                            <li th:text="${task.getTitle()}"></li>
                                         </ul>
 
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
-                                            It is all.</p>
+                                            See you later alligator</p>
                                     </td>
                                 </tr>
                             </table>
